# Astro

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
app/: __init__.py  main.py
deploy/: docker-entrypoint.sh  staging.env.example
docs/: ASHTAKAVARGA_V1.md  CHARTS_D1_D9_V1.md  CLASSICAL_ASPECTS_V1.md  CLASSICAL_CAREER_V1.md  CLASSICAL_CONDITIONS_V1.md  CLASSICAL_DASHA_CONTEXT_V1.md  CLASSICAL_RELATIONSHIPS_V1.md  CLASSICAL_STRENGTH_V1.md  CLASSICAL_TRANSITS_V1.md  COMPATIBILITY_RULE_BOUNDARY.md  CONTROLLED_STRENGTH_WEIGHTING_V1.md  EPHEMERIS_DEPLOYMENT.md  EXTERNAL_SNAPSHOT_NORMALIZATION_V1.md  EXTERNAL_VALIDATION_EVIDENCE_V1.md  GOLDEN_CHART_VALIDATION_V1.md  HUGGING_FACE_DEPLOYMENT_RUNBOOK.md  PANCHANGA_V1.md  PHASE_3_PREDICTION_COMPATIBILITY.md  PHASE_4_COMPATIBILITY_REPORT.md  PHASE_4_DIRECTIONAL_KOOTA_CONVENTIONS.md  PHASE_4_MANGLIK_FACTS.md  PRIVATE_BETA_LOCAL_RUNBOOK.md  RATE_LIMITS_METERING_V1.md  RUNTIME_GUARDRAILS_V1.md  SERVICE_AUTH_V1.md  SKYFIELD_JPL_PROVIDER_V1.md  TRANSIT_SNAPSHOT_V1.md  VARAHAMIHIRA_REFERENCE_V1.md  VIMSHOTTARI_CURRENT_V1.md  VIMSHOTTARI_V1.md  rate-limits-and-usage-metering-v1.md
scripts/: audit_huggingface_deployment_readiness.py  download_jpl_kernel.py  generate_jpl_golden_baselines.py  staging_smoke.py  validate_staging_env.py  verify-private-beta-local.ps1
tests/: test_charts.py  test_classical_ashtakavarga.py  test_classical_aspects.py  test_classical_career.py  test_classical_conditions.py  test_classical_dasha.py  test_classical_prediction.py  test_classical_reference.py  test_classical_relationships.py  test_classical_strength.py  test_classical_transits.py  test_classical_validation.py  test_classical_validation_imports.py  test_classical_weighting.py  test_compatibility_contract.py  test_compatibility_directional_rules.py  test_compatibility_facts.py  test_compatibility_report.py  test_compatibility_route.py  test_compatibility_rules.py  test_current_dasha.py  (+21 more)
(+165 files in other folders)
