[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "jyothisyam-api"
version = "0.1.0"
description = "Commercial Vedic and South Indian astrology API"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115,<1.0",
    "numpy>=1.26,<3.0",
    "skyfield==1.54",
    "tzdata==2026.3",
    "uvicorn[standard]>=0.30,<1.0",
    "varahamihira-engine @ git+https://github.com/mkraja826/varahamihira.git@6fcdb21f4f8027db101881c1f43a5132b3226cc1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8,<9",
    "ruff>=0.9,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = [
    "data/jpl/*.bsp",
    "data/jpl/*.md",
    "data/validation/*/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"app/engine/classical_validation_imports.py" = ["E501", "UP035"]
"tests/test_classical_validation_imports.py" = ["E501"]
